--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,11 +139,11 @@
     <string name="please_go_back_and_select_heena_option">Please go back and select heena option</string>
     <string name="this_slot_is_not_available">This slot is not available please select other.</string>
     <string name="heena">Heena</string>
-    <string name="our_staff_will_come">Our staff come with you come</string>
+    <string name="our_staff_will_come">Our staff will visit your home</string>
     <string name="add_new_address">Add new address details</string>
     <string name="villa_number_flat_number">Villa number/Flat number</string>
     <string name="address_type">Address type</string>
-    <string name="shop_text">Visit Shop</string>
+    <string name="shop_text">Visit Salon</string>
     <string name="home_text">Home</string>
     <string name="please_select_timeslot_and_date_again">Please select another slot time or date as this is not available.</string>
     <string name="add_more_items">Add More Items</string>
@@ -159,4 +159,11 @@
     <string name="am_text">AM</string>
     <string name="pm_text">PM</string>
     <string name="default_notification_channel_id">channel notification</string>
+    <string name="location_updated">Location Updated</string>
+    <string name="location_permisssion">Please allow for location permissions</string>
+    <string name="permission_denied_explanation">Location permission denied it will cause difficulty in location updation.</string>
+    <string name="settings">Settings</string>
+    <string name="location_permission_required">Location permission required</string>
+    <string name="search_for_location">Search for location</string>
+    <string name="data_updated_successfully">Data has been updated successfully</string>
 </resources>
