Resolved all the bugs mentioned by Alisha and client.

--- a/app/src/main/res/values-ar-rQA/strings.xml
+++ b/app/src/main/res/values-ar-rQA/strings.xml
@@ -1,36 +1,37 @@
 <resources>
-    <string name="app_name">ريم جلام</string>
+    <string name="app_name">ريم غلام</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">مرحبًا</string>
     <string name="welcome_back">مرحبًا بعودتك</string>
     <string name="enter_your_email">أدخل بريدك الإلكتروني</string>
     <string name="enter_your_password">ادخل رقمك السري</string>
     <string name="login">تسجيل الدخول</string>
     <string name="forgot_password"><u>هل نسيت كلمة السر؟</u></string>
-    <string name="dont_have_an_acc_signup">ليس لديك حساب؟<b><u>اشتراك</u></b></string>
+    <string name="dont_have_an_acc_signup">اشتراك</string>
     <string name="guest">زائر</string>
-    <string name="create_account">إصنع حساب</string>
+    <string name="create_account">انشاء حساب</string>
     <string name="name">اسم</string>
     <string name="email">البريد الإلكتروني</string>
     <string name="password">كلمة المرور</string>
     <string name="signup">اشتراك</string>
-    <string name="already_have_an_acc_login"> هل لديك حساب؟<b><u>تسجيل الدخول</u></b></string>
+    <string name="already_have_an_acc_login">تسجيل الدخول</string>
     <string name="mobile">التليفون المحمول</string>
-    <string name="forgotpassword">نسيت
-كلمة المرور؟</string>
+    <string name="forgotpassword">هل نسيت كلمة السر؟</string>
     <string name="new_password">كلمة السر الجديدة</string>
     <string name="confirm_password">تأكيد كلمة المرور</string>
-    <string name="save">يحفظ</string>
-    <string name="verify">يحفظ</string>
-    <string name="enter_otp_received_on_email">أدخل otp المستلمة على بريدك الإلكتروني</string>
-    <string name="resend_otp">ألم تتلق رمز؟<b><u>اطلب مرة أخرى</u></b></string>
-    <string name="login_success_text">"تم بنجاح \ n تم تعيين حسابك بالكامل \ n استمتع باستخدام"</string>
-    <string name="home">مسكن</string>
+    <string name="save">حفظ</string>
+    <string name="verify">تاكيد</string>
+    <string name="enter_otp_received_on_email">أدخل كلمة السر المستلمة على بريدك الإلكتروني</string>
+    <string name="resend_otp">اطلب مرة أخرى</string>
+    <string name="login_success_text">نجاح تم تعيين حسابك بالكامل استمتع باستخدام</string>
+    <string name="home">الصفحه الرئيسيه</string>
     <string name="booking">الحجز</string>
     <string name="profile">الملف الشخصي</string>
     <string name="book_now">احجز الآن</string>
     <string name="categories">فئات</string>
     <string name="testimonals">اقتبس من اليوم</string>
-    <string name="search_for_services">ابحث عن الخدمات</string>
-    <string name="select_date">ابحث عن الخدمات</string>
+    <string name="search_for_services">البحث عن الخدمات</string>
+    <string name="select_date">تحديد تاريخ</string>
     <string name="time">زمن</string>
     <string name="total_amount">المبلغ الإجمالي</string>
     <string name="menu">قائمة الطعام</string>
@@ -53,18 +54,18 @@
     <string name="book_for_now">احجز الآن</string>
     <string name="update_booking">تحديث الحجز</string>
     <string name="cart">عربة التسوق</string>
-    <string name="confirm">يتأكد</string>
+    <string name="confirm">تاكيد</string>
     <string name="cancel_booking">إلغاء الحجز</string>
     <string name="cancel_your_booking">إلغاء الحجز الخاص بك</string>
-    <string name="are_you_sure_to_cancel_your_booking">هل أنت متأكد من أنك \ n تريد الإلغاء</string>
+    <string name="are_you_sure_to_cancel_your_booking">هل أنت متأكد أنك تريد إلغاء</string>
     <string name="stay">يقضي</string>
     <string name="yes_cancel">نعم إلغاء</string>
     <string name="summary">ملخص</string>
     <string name="pay">يدفع</string>
     <string name="payment_method">طريقة الدفع او السداد</string>
     <string name="cash_in_hand">نقد في اليد</string>
-    <string name="pay_at_store">ادفع في المتجر</string>
-    <string name="add_address">اضف عنوان</string>
+    <string name="pay_at_store">نقاط البيع</string>
+    <string name="add_address">اضافة عنوان</string>
     <string name="enter_address_details">أدخل تفاصيل العنوان</string>
     <string name="zone">منطقة</string>
     <string name="street">شارع</string>
@@ -72,14 +73,14 @@
     <string name="floor_number">رقم الدور</string>
     <string name="mobile_number">رقم الهاتف المحمول؟*</string>
     <string name="landline_number">رقم الهاتف الأرضي (اختياري)</string>
-    <string name="instructions_if_any">رقم الهاتف الأرضي (اختياري)</string>
-    <string name="save_and_continue">تعليمات (إن وجدت)</string>
+    <string name="instructions_if_any">تعليمات (إن وجدت)</string>
+    <string name="save_and_continue">احفظ وتابع</string>
     <string name="your_location">موقعك</string>
-    <string name="confirm_pin_location">موقعك</string>
-    <string name="go_to_bookings"><u>تأكيد موقع الدبوس</u></string>
+    <string name="confirm_pin_location">تأكيد موقع الدبوس</string>
+    <string name="go_to_bookings"><u>اذهب إلى الحجز</u></string>
     <string name="continue_booking">استمر في الحجز</string>
-    <string name="packages">استمر في الحجز</string>
-    <string name="choose_language">الحزم</string>
+    <string name="packages">الحزم</string>
+    <string name="choose_language">اختر اللغة</string>
     <string name="continue_text">يكمل</string>
     <string name="your_session_is_out">لقد انتهت جلستك يرجى تسجيل الدخول مرة أخرى.</string>
     <string name="hair_cut">حلاقة شعر</string>
@@ -88,10 +89,10 @@
     <string name="blow_dry">جاف</string>
     <string name="hair_henna">حناء الشعر</string>
     <string name="hair_treatment">علاج الشعر</string>
-    <string name="point_of_sale">نقطة البيع</string>
+    <string name="point_of_sale">نقاط البيع</string>
     <string name="hair_kids">أطفال</string>
     <string name="more">أكثر</string>
-    <string name="order_success">موعدك \n المحجوز \n ناجح</string>
+    <string name="order_success">تم حجز موعدك بنجاح</string>
     <string name="view_all">مشاهدة الكل</string>
     <string name="reset_password">إعادة تعيين كلمة المرور</string>
     <string name="please_enter_name">الرجاء إدخال الاسم</string>
@@ -100,7 +101,7 @@
     <string name="please_enter_valid_mobile">الرجاء إدخال هاتف محمول صالح</string>
     <string name="please_enter_country_code">الرجاء تحديد رمز الدولة.</string>
     <string name="please_enter_password">الرجاء إدخال كلمة السر الصحيحة.</string>
-    <string name="please_enter_otp">الرجاء إدخال otp صالح</string>
+    <string name="please_enter_otp">الرجاء إدخال كلمة السر صالح</string>
     <string name="please_enter_valid_password">يجب أن تكون كلمة المرور هي نفسها.</string>
     <string name="update">تحديث</string>
     <string name="update_profile">تحديث الملف</string>
@@ -121,7 +122,7 @@
     <string name="please_login_first">الرجاء تسجيل الدخول أولا</string>
     <string name="reema">صالون ريم جلام</string>
     <string name="please_login">الرجاء تسجيل الدخول</string>
-    <string name="cancel">يلغي</string>
+    <string name="cancel">الغاء</string>
     <string name="please_select_order_time_slot">الرجاء تحديد خانة الوقت.</string>
     <string name="please_select_address_type">الرجاء تحديد نوع العنوان</string>
     <string name="no_category_found">لم يتم العثور على فئة.</string>
@@ -138,29 +139,31 @@
     <string name="please_go_back_and_select_heena_option">يرجى العودة وتحديد خيار هينا</string>
     <string name="this_slot_is_not_available">هذه الفتحة غير متوفرة الرجاء تحديد أخرى.</string>
     <string name="heena">هينا</string>
-    <string name="our_staff_will_come">سيقوم موظفينا بزيارة منزلك</string>
+    <string name="our_staff_will_come">سيقوم موظفونا بزيارة منزلك</string>
     <string name="add_new_address">أضف تفاصيل العنوان الجديد</string>
     <string name="villa_number_flat_number">رقم الفيلا / رقم الشقة</string>
     <string name="address_type">نوع العنوان</string>
     <string name="shop_text">زيارة الصالون</string>
-    <string name="home_text">مسكن</string>
+    <string name="home_text">صفحة رئيسية</string>
     <string name="please_select_timeslot_and_date_again">يرجى تحديد وقت أو تاريخ آخر للفتحة لأن هذا غير متاح.</string>
     <string name="add_more_items">أضف المزيد من العناصر</string>
     <string name="price_should_be_more">يرجى تحديد الخدمة التي تزيد قيمتها عن 100 ريال قطري للخدمة المنزلية.</string>
     <string name="okay">تمام</string>
-    <string name="otp_sent_successfully">تم التحقق من Otp بنجاح.</string>
-    <string name="enter_otp_sent_successfully">الرجاء إدخال otp صالح.</string>
+    <string name="otp_sent_successfully">تم التحقق من كلمة السر بنجاح.</string>
+    <string name="enter_otp_sent_successfully">الرجاء إدخال كلمة السر صالح.</string>
     <string name="no_service_available">لا توجد خدمة متاحة.</string>
-    <string name="currency_value">ثلج</string>
-    <string name="for_text">إلى عن على</string>
+    <string name="currency_value">ريال قطري</string>
+    <string name="for_text">ل</string>
     <string name="shop">محل</string>
     <string name="new_text">جديد</string>
     <string name="am_text">صباحا</string>
     <string name="pm_text">مساءً</string>
-    <string name="location_permisssion">Please allow for location permissions</string>
-    <string name="permission_denied_explanation">Location permission denied it will cause difficulty in location updation.</string>
-    <string name="settings">Settings</string>
-    <string name="location_permission_required">Location permission required</string>
+    <string name="default_notification_channel_id">channel notification</string>
+    <string name="location_updated">تم تحديث الموقع</string>
+    <string name="location_permisssion">الرجاء السماح لأذونات الموقع</string>
+    <string name="permission_denied_explanation">تم رفض إذن الموقع لأنه سيسبب صعوبة في تحديث الموقع.</string>
+    <string name="settings">إعدادات</string>
+    <string name="location_permission_required">مطلوب إذن الموقع</string>
     <string name="search_for_location">ابحث عن الموقع</string>
-    <string name="data_updated_successfully">Data has been updated successfully</string>
+    <string name="data_updated_successfully">تم تحديث البيانات بنجاح</string>
 </resources>
